--- a/content/6_schlusswort/schlusswort.tex
+++ b/content/6_schlusswort/schlusswort.tex
@@ -13,10 +13,9 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%    
 \chapter{Schlusswort}\label{ch:schlusswort}
-	Bedingt durch das Engagement im Eurobot-Projekt standen uns für diese Arbeit nur 5 Wochen zur Verfügung. In dieser Zeit hatten wir uns das nötige Wissen anzueignen, die Aufgabenstellung zu analysieren und die gestellten Anforderungen umzusetzen. Wie es sich während den Projektphasen zeigte, reichte diese Zeit nicht aus um uns in die relevanten Aspekte der Biomechanik gebührend einzulesen und gleichzeitig eine Umsetzung anzustreben. Deshalb mussten wir bei der Algorithmus-Entwicklung wiederholt Erneuerungen anbringen, was schlussendlich eine solide Realisierung verunmöglichte. Weiter wären klare und im Voraus bekannte Ziele und Anforderungen wünschenswert gewesen. Dies entspricht zwar nicht dem Verlauf eines Forschungsprojekts, hätte jedoch den gezielten Einstieg in die Thematik vereinfacht.\par % Wir verstehen, dass dies bei einem Forschungsprojekt nicht möglich ist. Dies hätte uns jedoch den Einstieg in die Thematik stark vereinfacht.\par
-	%	
-	Es ist zu hoffen, dass in naher Zukunft das Eurobot-Projekt besser mit der folgenden Thesis-Arbeiten harmoniert. Dies würde eine grössere Zufriedenstellung für die Studierenden sowie die betreuenden Dozenten sicherstellen.\par
+	Bedingt durch das Engagement im Eurobot-Projekt standen uns für diese Arbeit lediglich fünf Wochen zur Verfügung. In dieser Zeit hatten wir uns das nötige Wissen anzueignen, die Aufgabenstellung zu analysieren und die gestellten Anforderungen umzusetzen. Wie es sich während der Projektphasen zeigte, reichte diese Zeit nicht aus, um uns in die relevanten Aspekte der Biomechanik gebührend einzulesen und gleichzeitig eine Umsetzung anzustreben. Deshalb mussten wir bei der Algorithmus-Entwicklung wiederholt Änderungen anbringen, was schliesslich eine solide Realisierung verzögerte. \\
+	Und dennoch: Das ganze Projekt war eine spannende und durchaus interessante Herausforderung. Die Parallelität von Eurobot-Projekt und Thesis versetzte uns mental in die reale Arbeitswelt, wo häufig auch mehrere Projekte mit erster Priorität zu behandeln sind. Die zeitliche Koordination von Eurobot-Wettkampf und Bachelor-Thesis haben wir suboptimal gelöst.\par
 	%
-	Abschliessend lässt sich sagen, dass in der kurzen Zeit dennoch fundierte Grundlagen für den weiteren Verlauf des Projekts erarbeitet und aufgezeigt werden konnten.
+	Abschliessend lässt sich sagen, dass in der kurzen Zeit dennoch fundierte Grundlagen für den weiteren Verlauf des Projekts erarbeitet und aufgezeigt werden konnten. Unsere Arbeit ist eine valable Grundlage für eine allfällige Master-Arbeit.
 	
 	
