--- a/appendix/versionierung/versionierung.tex
+++ b/appendix/versionierung/versionierung.tex
@@ -25,7 +25,7 @@
             \hline
             1.0.0 & Abgabe der Dokumentation & gross10, zursr1\\
             \hline
-            0.2.0 & Abschliessende Korrekturen mit Experten& gross10, zursr1\\
+            0.2.0 & Abschliessende Korrekturen mit Sprachexperte Deutsch& gross10, zursr1\\
             \hline
             0.1.0 & Korrekturen von den Autoren & gross10, zursr1\\
             \hline
